--- a/src/Components/DiscriptionBox/DiscriptionBox.css
+++ b/src/Components/DiscriptionBox/DiscriptionBox.css
@@ -26,3 +26,12 @@
     padding: 48px;
     padding-bottom: 70px;
 }
+
+@media(max-width:800px){
+    .discriptionbox{
+        margin: 60px 20px;
+    }
+    .discriptionbox-discription{
+        font-size: 14px;
+    }
+}
